Change default locale + change text align of signature

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,7 +36,7 @@
         </div>
         <footer>
             <img title="logo-iut" class="logo-iut" alt="logo-iut" src="{{ asset('front/assets/img/logo-iut.png') }}">
-            <p class="signature">Hugo Alliaume, Anthony Margerand et Richard Raduly</p>
+            <p class="signature text-center">Hugo Alliaume, Anthony Margerand et Richard Raduly</p>
         </footer>
 
         <!-- Bootstrap and necessary plugins -->
