--- a/app/Resources/FOSUserBundle/views/Registration/check_email.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/check_email.html.twig
@@ -3,5 +3,20 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-    <p>{{ 'registration.check_email'|trans({'%email%': user.email}) }}</p>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card mx-2">
+                    <div class="card-block p-2">
+                        <p>{{ 'registration.check_email'|trans({'%email%': user.email}) }}</p>
+                        <p>
+                            <a href="{{ path('homepage') }}" class="btn btn-block btn-primary">
+                                <i class="fa fa-arrow-left"></i>&nbsp;{{ 'return_to_homepage' | trans({}, 'AppBundle') }}
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock fos_user_content %}
