--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -8,7 +8,7 @@
 {% endblock fos_user_content %}
 
 {% block javascripts %}
-    <script src='https://www.google.com/recaptcha/api.js' async defer></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <script>
       function onSubmit(token) {
         document.getElementById("fos_user_registration_register").submit();
