--- a/app/Resources/FOSUserBundle/views/Resetting/check_email.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/check_email.html.twig
@@ -3,7 +3,22 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-<p>
-{{ 'resetting.check_email'|trans({'%tokenLifetime%': tokenLifetime})|nl2br }}
-</p>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card mx-2">
+                    <div class="card-block p-2">
+                        <p>
+                            {{ 'resetting.check_email'|trans({'%tokenLifetime%': tokenLifetime})|nl2br }}
+                        </p>
+                        <p>
+                            <a href="{{ path('homepage') }}" class="btn btn-block btn-primary">
+                                <i class="fa fa-arrow-left"></i>&nbsp;{{ 'return_to_homepage' | trans({}, 'AppBundle') }}
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
