--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -2,6 +2,7 @@
 {% block title %}Kodastran Backoffice Login{% endblock %}
 {% block bodyclass %}app header-fixed footer-fixed{% endblock %}
 
+{% block mainclass %}main{% endblock %}
 {% block main %}
     {% for type, messages in app.session.flashBag.all %}
         {% for message in messages %}
