--- a/app/Resources/views/backoffice_base.html.twig
+++ b/app/Resources/views/backoffice_base.html.twig
@@ -48,7 +48,7 @@
                 {% include '@App/backoffice/partial/_sidebar.html.twig' %}
             {% endif %}
             <!-- Main content -->
-            <main class="main p-2">
+            <main class="{% block mainclass %}main p-1{% endblock %}">
                 {% for type, flash_messages in app.session.flashBag.all %}
                     {% for flash_message in flash_messages %}
                         <div class="alert alert-{{ type }}">
