--- a/src/AppBundle/Resources/views/backoffice/users/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/users/index.html.twig
@@ -10,16 +10,13 @@
     <table class="table">
         <thead>
         <tr>
-            <th{% if pagination.isSorted('a.id') %} class="sorted"{% endif %}>
-                {{ knp_pagination_sortable(pagination, '#', 'a.id') }}
-            </th>
             <th{% if pagination.isSorted('a.firstname') %} class="sorted"{% endif %}>
                 {{ knp_pagination_sortable(pagination, 'users.first_name' | trans, 'a.firstname') }}
             </th>
             <th{% if pagination.isSorted('a.lastname') %} class="sorted"{% endif %}>
                 {{ knp_pagination_sortable(pagination, 'users.last_name' | trans, 'a.lastname') }}
             </th>
-            <th{% if pagination.isSorted('a.email') %} class="sorted"{% endif %}>
+            <th class="hidden-xs-down {% if pagination.isSorted('a.email') %}sorted{% endif %}">
                 {{ knp_pagination_sortable(pagination, 'users.email' | trans, 'a.email') }}
             </th>
             <th></th>
@@ -29,20 +26,19 @@
 
         {% for user in pagination %}
             <tr>
-                <td>{{ user.id }}</td>
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
-                <td>{{ user.email }}</td>
+                <td class="hidden-xs-down">{{ user.email }}</td>
                 <td>
                     <a href="{{ path('backoffice_users_update', {'id': user.id}) }}"
                        class="btn btn-primary">
-                        <i class="fa fa-pencil"></i>&nbsp;{{ 'users.update' | trans }}
+                        <i class="fa fa-pencil"></i><span class="hidden-xs-down">&nbsp;{{ 'users.update' | trans }}</span>
                     </a>
                     {% if not user.hasRole('ROLE_ADMIN') %}
                         <a href="{{ path('backoffice_users_delete', {'id': user.id}) }}"
                            onclick="return confirm('{{ 'users.delete_confirmation' | trans }}');"
                            class="btn btn-danger">
-                            <i class="fa fa-trash"></i>&nbsp;{{ 'users.delete' | trans }}
+                            <i class="fa fa-trash"></i><span class="hidden-xs-down">&nbsp;{{ 'users.delete' | trans }}</span>
                         </a>
                     {% endif %}
                 </td>
