--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:site_name" content="Kodrastan">
         {% block head_meta %}{% endblock %}
         <title>{% block title %}{{ 'homepage' | trans }}{% endblock %} | Kodrastan</title>
         <!-- Generic top stylesheet -->
