--- a/web/CoreUI/css/style.css
+++ b/web/CoreUI/css/style.css
@@ -8945,3 +8945,7 @@ base-chart.chart {
     margin-top: 0.5rem; }
   .btn-block + .btn-block {
     margin-top: 0.5rem; }
+
+@media (max-width: 767px) {
+  .main .container-fluid {
+    padding: 0; } }
